--- a/PORTF/humanas/index.html
+++ b/PORTF/humanas/index.html
@@ -89,7 +89,13 @@
                                 <b>Assunto:</b> 2ª Guerra Mundial. <br>
                                 <b>Objetivo:</b> A atividade consiste na criação de uma planilha com dados estatísticos. <br>
                                 <b>Crítica Pessoal:</b> Uma atividade meio chata de se realizar. <br>
-                                <b>Habilidades:</b> Não Informadas. <br>
+                                <b>Habilidades:</b> 
+                                <b>C5</b> – Aplicar os fundamentos da cidadania, favorecendo uma atuação consciente do indivíduo  na sociedade.
+                                <b>C6</b> – Avaliar a sociedade como um sistema complexo, estruturado sob os aspectos políticos,  econômicos, sociais e geoambientais. 
+                                <b>H30</b> – Analisar as lutas sociais e conquistas obtidas no que se refere às mudanças nas legislações ou nas políticas  públicas.
+                                <b>H36</b> – Propor interpretações e soluções para problemas identificados no contexto social brasileiro. 
+                                <b>H39</b> – Relacionar o papel das instituições sociais às soluções para problemas políticos, econômicos, sociais e  ambientais no contexto da sociedade brasileira. 
+                                <b>H40</b> – Analisar o processo de formação das instituições sociais e políticas, compreendendo seu papel na sociedade.<br>
                                 <b><a href="https://docs.google.com/spreadsheets/d/1uwELv0TnOw9JE8XUjJc9bgVBtHSi50Ewl0OpAK3SmoE/edit?usp=sharing">Planilha</a></b>
                             </p>
                         </div>
@@ -103,7 +109,13 @@
                                 <b>Assunto:</b> UR fascismo a partir da obra Umberto Eco. <br>
                                 <b>Objetivo:</b> A atividade consiste as questões solicitadas se baseando no vídeo passado em sala. <br>
                                 <b>Crítica Pessoal:</b> Uma atividade simples, sem comentários sobre. <br>
-                                <b>Habilidades:</b> Não Informadas. <br>
+                                <b>Habilidades:</b> 
+                                <b>C2</b> – Compreender a importância do trabalho na constituição das sociedades e na formação  dos sujeitos.  
+                                <b>C4</b> – Interpretar dados e informações referentes aos aspectos políticos, econômicos, sociais e  culturais da sociedade contemporânea.
+                                <b>H10</b> – Compreender as transformações no mundo do trabalho, geradas por mudanças na ordem econômica.
+                                <b>H22</b> – Analisar, na perspectiva humana e social, as principais características e dinâmicas dos fluxos da sociedade. 
+                                <b>H26</b> – Comparar pontos de vista e ações práticas do indivíduo ou grupo social em diferentes contextos. 
+                                <b>H27</b> – Analisar hipóteses e questões ambientais, sociais, econômicas, políticas e culturais, a partir de leituras e  debates.<br>
                                 <b><a href="https://docs.google.com/document/d/1LCNqkK7PXLTDDJEhcbCcQF4CqY5tYIubAFgSwg1pPwA/edit?usp=sharing">Docs</a></b>
                             </p>
                         </div>
@@ -115,7 +127,7 @@
                     <div class="caixa">
                         <div class="descricao">
                             <h4>Em breve</h4>
-                            <p>Sem nada aqui ainda também :]</p>
+                            <p>Sem nada aqui ainda :]</p>
                         </div>
                     </div>
                 </div>
