--- a/PORTF/linguas/index.html
+++ b/PORTF/linguas/index.html
@@ -131,9 +131,45 @@
                 <div class="p1texto"><h2>2º Trimestre</h2></div>
                 <div class="container">
                     <div class="caixa">
+                        <img src="../fotos/vozes.png" alt="atividade 1">
                         <div class="descricao">
-                            <h4>Em breve</h4>
-                            <p>Sem nada aqui ainda :]</p>
+                        <div class="atv"> <h4>Atividade 1</h4> </div>
+                            <p> 
+                                <b>Assunto:</b> Site Revista literária. <br>
+                                <b>Objetivo:</b> Criar um site no Google Sites e criar uma revista literária. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade bastante instigante e, de fato, muito interessante. Apreciei bastante as obras recomendadas. <br>
+                                <b>Habilidades:</b>  H23. <br>
+                                <b><a href="https://sites.google.com/estudante.sesisenai.org.br/vozes-criativas/p%C3%A1gina-de-servi%C3%A7o">Site</a></b>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="caixa">
+                        <img src="../fotos/VanGogh.png" alt="atividade 2">
+                        <div class="descricao">
+                        <div class="atv"> <h4>Atividade 2</h4> </div>
+                            <p> 
+                                <b>Assunto:</b> Que tipo de arte você consome? <br>
+                                <b>Objetivo:</b> Criar um Docs com os 3 tipos de artes solicitadas em ingles no simple past. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade bem simples e divertida de fazer. <br>
+                                <b>Habilidades:</b>  
+                                <b>H11</b> - Praticar vocábulos e expressões da Língua inglesa relativos a área profissional.
+                                <b>H25</b> - Interpretar textos em Língua Estrangeira Moderna (Inglês). <br>
+                                <b><a href="https://docs.google.com/document/d/1qGWkPXYW5wFCEoYCW-bQbJcviRtFg0m5wH_200z2RHw/edit?usp=sharing">Docs</a></b>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="caixa">
+                        <img src="../fotos/notaReda.png" alt="atividade 3">
+                        <div class="descricao">
+                        <div class="atv"> <h4>Atividade 3</h4> </div>
+                            <p> 
+                                <b>Assunto:</b> Nota Redação Online <br>
+                                <b>Objetivo:</b> Realizar uma redação estilo ENEM. <br>
+                                <b>Crítica Pessoal:</b> Um tema que tinha um certo dominio, apesar da nota "boa" podia ter sido melhor. <br>
+                                <b>Habilidades:</b> Não Informadas. <br>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -143,7 +179,7 @@
                     <div class="caixa">
                         <div class="descricao">
                             <h4>Em breve</h4>
-                            <p>Sem nada aqui ainda também :]</p>
+                            <p>Sem nada aqui ainda :]</p>
                         </div>
                     </div>
                 </div>
