--- a/PORTF/mtm/index.html
+++ b/PORTF/mtm/index.html
@@ -64,11 +64,36 @@
                 <div class="p1texto"><h2>2º Trimestre</h2></div>
                 <div class="container">
                     <div class="caixa">
+                        <img src="../fotos/notaMtm.png" alt="atividade 1">
                         <div class="descricao">
-                            <h4>Em breve</h4>
-                            <p>Sem nada aqui ainda :]</p>
+                        <div class="atv"> <h4>Atividade 1</h4> </div>
+                            <p>
+                                <b>Assunto:</b> Prova Passe Matemática. <br>
+                                <b>Objetivo:</b> Fazer uma prova objetiva de matemática de 32 questões. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade complexa de se fazer, meus resultados foram medianos e tenho melhorias a fazer. <br>
+                                <b>Habilidades:</b>  Não Informadas. <br>
+                            </p>
                         </div>
                     </div>
+
+                    <div class="caixa">
+                        <img src="../fotos/redesMtm.png" alt="atividade 1">
+                        <div class="descricao">
+                        <div class="atv"> <h4>Atividade 2</h4> </div>
+                            <p>
+                                <b>Assunto:</b> Estatística. <br>
+                                <b>Objetivo:</b> Criar um formulario com um assunto escolhido pelo grupo e usar de estatística para realizar a media de respostas. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade complexa de se fazer, porem achei bem divertido de fazer. <br>
+                                <b>Habilidades:</b>  
+                                <b>C4</b> - Analisar e investigar  dados e informações de  natureza científica e  social, articulando diferentes áreas do conhecimento, compreendendo representações gráficas  e uso de modelos matemáticos, realizando  inferências, previsões e  tendências, para tomadas de decisão. 
+                               <b>H27</b> - Compreender informações estatísticas provenientes de naturezas distintas  (social, econômica, política ou científica) e formular juízos com base nessas  informações.
+                               <b>H28</b> - Calcular medidas de tendência central e de dispersão de um conjunto de  dados para aplicá-las e analisá-las em situações diversas no contexto das  ciências, das tecnologias, das atividades pessoais e profissionais. 
+                               <b>H29</b> - Construir tabelas e gráficos com recursos tecnológicos que permitam  simplificar cálculos, facilitar a leitura e a compreensão das informações, para  análise da realidade. <br>
+                                <b><a href="https://www.canva.com/design/DAGsDdDrl6c/lzrO330BcGIcXPcDjVhH_A/edit?utm_content=DAGsDdDrl6c&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Canva</a></b>
+                            </p>
+                        </div>
+                    </div>
+
                 </div>
 
                 <div class="p1texto"><h2>3º Trimestre</h2></div>
@@ -76,7 +101,7 @@
                     <div class="caixa">
                         <div class="descricao">
                             <h4>Em breve</h4>
-                            <p>Sem nada aqui ainda também :]</p>
+                            <p>Sem nada aqui ainda :]</p>
                         </div>
                     </div>
                 </div>
