--- a/PORTF/natureza/index.html
+++ b/PORTF/natureza/index.html
@@ -150,7 +150,7 @@
                     <div class="caixa">
                         <div class="descricao">
                             <h4>Em breve</h4>
-                            <p>Sem nada aqui ainda também :]</p>
+                            <p>Sem nada aqui ainda :]</p>
                         </div>
                     </div>
                 </div>
